<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="marioargandona.com.miscontactos.MainActivity"
    >

    <!--<ListView
        android:id="@+id/lstContactos"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_Contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"/>

    </android.support.design.widget.TextInputLayout>


    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/datePicker"
        android:spinnersShown="true"
        android:datePickerMode="spinner"
        android:calendarViewShown="false" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtTelefonoContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_Contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmailContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_Contacto"
            android:layout_below="@id/txtTelefonoContacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.23">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_Contacto"
            android:layout_below="@id/txtEmailContacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:inputType="textLongMessage|textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:id="@+id/button"
        android:layout_gravity="bottom"
        android:theme="@style/MiBotonRaised"
        android:onClick="enviaDatos"/>


</LinearLayout>
